# llm-quiz-solver

./: .env.example  .gitignore  CHECKLIST.md  Dockerfile  LICENSE  MACOS_SETUP.md  PROJECT_STRUCTURE.txt  PROMPTS.md  QUICKSTART.md  README.md  START_HERE.md  agent.py  config.py  main.py  pyproject.toml  setup.sh  test_setup.py
.github/workflows/: keepalive.yml
tools/: __init__.py  downloader.py  executor.py  installer.py  requester.py  scraper.py
